# pfwd

./: .gitattributes  .gitignore  Makefile.am  README.md  build_lin.sh  build_win32.sh  build_win64.sh  configure.ac
m4/: NOTES
plugins/writestream/: streaminspector.c  timefn.c  timefn.h  timefncu.c  utilityfn.c  utilityfn.h  writestream.c  writestream.h
src/: application.c  application.h  main.c  myconfig.h  pfwd.h
